--- a/front/public/index.html
+++ b/front/public/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="es">
+<html data-theme="dark" lang="es"></html>
   <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <!-- <meta name="theme-color" content="#000000" /> -->
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -16,6 +17,7 @@
     <link rel="icon" href="path/to/favicon.ico" type="image/x-icon">
   </head>
   <body>
+    
     <div id="root"></div>
   </body>
 </html>
